fixed align example, changed picture widths

--- a/src/assets/css/about.css
+++ b/src/assets/css/about.css
@@ -30,7 +30,7 @@ h2, h3 {
 }
 
 .example img {
-    width: 70%;
+    width: 60vw;
     display: block;
     margin: 0 auto;
 }
@@ -49,7 +49,7 @@ h2, h3 {
 }
 
 .interactive {
-    margin: 7% auto 0 auto;
+    margin: 4% auto 0 auto;
 }
 
 .one, .two {
@@ -138,10 +138,28 @@ h2, h3 {
     display: block;
     margin: 0 auto;
 }
+@media screen and (max-width: 1250px) {
+    #text-example {
+        display: grid;
+        grid-template-columns: 50% 50%;
+    }
+    #text-example div {
+        margin: 0 auto;
+    }
+    #justified-align, #right-align  {
+        padding-top: 5vh;
+    }
+}
 
 @media screen and (max-width: 920px) {
     .big-pink{
        font-size: 1.9em;
+    }
+    .example img {
+        width: 80vw;
+    }
+    img.display {
+        width: 70vw;
     }
 }
 
@@ -149,14 +167,19 @@ h2, h3 {
     .big-pink{
         font-size: 1.5em;
     }
-
-    .example img {
-        width: 80vw;
-        display: block;
-        margin: 0 auto;
-    }
     main {
         margin: 10vh 10vw;
+    }
+    #text-example {
+        display: grid;
+        grid-template-columns: 100%;
+        padding: 0;
+    }
+    #justified-align, #right-align  {
+        padding-top: 7vh;
+    }
+    img.display {
+        width: 80vw;
     }
 }
 
